# Flashr

./: .gitignore  .vimspector.json  Cargo.toml  README.md  TODO.md  test_ser.json
src/: cli.rs  color.rs  deck.rs  event.rs  lib.rs  main.rs  random.rs  render_utils.rs  stats.rs  terminal.rs  weighted_list.rs
src/modes/: match_faces.rs  mod.rs  type_faces.rs
src/modes/flashcards/: mod.rs  widget.rs
src/modes/match_faces/: iter.rs  mod.rs  widget.rs
tests/: deck1.json  deck_subfaces.json  duplicate_card.json  duplicate_card_front_subfaced.json  duplicate_face.json  example.json  invalid_deck1.json  not_enough_card_faces.json  not_enough_cards.json  not_enough_faces.json  not_enough_usable_card_faces.json  stats.json  too_many_card_faces.json
tests/dir/: another_random_file.txt  deck2.json  deck3.json  deck_multi_face.json
tests/duplicate_cards/: duplicate_card_1.json  duplicate_card_2.json  duplicate_card_3.json  duplicate_card_4.json
tests/duplicate_deck_names/: duplicate_deckname_1.json
