[package]
name = "flashr"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# # Debug symbols
# [profile.release]
# debug = 1

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
crossterm = "0.27.0"
dirs = "5.0.1"
hashbrown = { version = "0.14.5", features = ["serde"]}
rand = "0.8.5"
ratatui = "0.27.0"
serde = { "version" = "1.0.204", "features" = ["std", "derive"] }
serde_json = "1.0.120"
